--- a/BLS.Infrastructure/Properties/AssemblyFileVersion.tt
+++ b/BLS.Infrastructure/Properties/AssemblyFileVersion.tt
@@ -2,16 +2,21 @@
 <#@ import namespace="System.IO" #>
 <#@ output extension=".cs" #>
 <#
-     int major = 0; 
+     int major = 1; 
      int minor = 0; 
      int build = 13; 
-     int revision = 0; 
-  
+     int revision = 7; 
      try
      {
          using(var f = File.OpenText(Host.ResolvePath("AssemblyFileVersion.cs")))
          {
-             string maj = f.ReadLine().Replace("//","");
+			string line = f.ReadLine();
+			do
+			{
+				line=f.ReadLine();
+			}while(line==string.Empty);
+
+             string maj = line.Replace("//","");
              string min = f.ReadLine().Replace("//","");
              string b = f.ReadLine().Replace("//","");
              string r = f.ReadLine().Replace("//","");
@@ -20,9 +25,10 @@
              minor = int.Parse(min); 
              build = int.Parse(b); 
              revision = int.Parse(r) + 1; 
+
          }
      }
-     catch
+     catch(Exception e)
      {
          major = 1; 
          minor = 0; 
